--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="nav">
     <div class="logo">THE SUN</div>
     <nav>
-      <a href="#">Programs</a>
+      <a href="programs.html">Programs</a>
       <a href="#">Performance</a>
       <a href="#">Community</a>
       <a href="#">Pricing</a>
@@ -71,3 +71,4 @@
 
 </body>
 </html>
+
