--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
 
   <!-- NAV -->
   <header class="nav">
-    <div class="logo">THE SUN</div>
-    <nav>
+  <div class="nav-container">
+    <div class="logo">THE SUN GYM</div>
+
+    <nav class="nav-links">
       <a href="programs.html">Programs</a>
-      <a href="#">Performance</a>
-      <a href="#">Community</a>
-      <a href="#">Pricing</a>
-      <a href="#" class="cta">Book Assessment</a>
+      <a href="coaches.html">Coaches</a>
+      <a href="#community">Community</a>
+      <a href="#pricing">Pricing</a>
+      <a href="contact.html" class="cta">Contact</a>
     </nav>
-  </header>
+  </div>
+</header>
+
 
   <!-- HERO -->
   <section class="hero">
@@ -71,4 +75,5 @@
 
 </body>
 </html>
+
 
