--- a/index.html
+++ b/index.html
@@ -31,14 +31,39 @@
 
 
   <!-- HERO -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Train With Purpose.<br>Build Strength That Lasts.</h1>
-      <p>Structured training. Disciplined environment.<br>
-         From first rep to elite performance.</p>
-      <button>Book a Free Assessment</button>
+<section class="hero">
+  <div class="hero-content">
+    <h1>Train Strong. Play Smart. Belong Here.</h1>
+    <p>Elite fitness, community energy, and a space for every level — from beginners to advanced athletes.</p>
+    <div class="hero-cta">
+      <a href="programs.html" class="btn-primary">Explore Programs</a>
+      <a href="contact.html" class="btn-secondary">Book a Visit</a>
     </div>
-  </section>
+  </div>
+</section>
+  
+
+  <!-- ABOUT -->
+<section class="about">
+  <h2>Why The Sun Gym?</h2>
+  <p>We are more than a gym. We are a hub where discipline meets community. Train hard, relax smart, connect with people who push you forward.</p>
+
+  <div class="about-cards">
+    <div class="card">
+      <h3>Serious Training</h3>
+      <p>Structured programs, expert coaches, measurable progress.</p>
+    </div>
+    <div class="card">
+      <h3>Friendly Vibe</h3>
+      <p>A welcoming space for all ages and experience levels.</p>
+    </div>
+    <div class="card">
+      <h3>Accessibility & Prestige</h3>
+      <p>Premium facilities with inclusive pricing, without compromising quality.</p>
+    </div>
+  </div>
+</section>
+
 
   <!-- PROGRAMS -->
   <section class="programs">
@@ -75,5 +100,6 @@
 
 </body>
 </html>
+
 
 
