--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <nav class="nav-links">
       <a href="programs.html">Programs</a>
       <a href="coaches.html">Coaches</a>
-      <a href="#community">Community</a>
-      <a href="#pricing">Pricing</a>
+      <a href="community.html">Community</a>
+      <a href="pricing.html">Pricing</a>
       <a href="contact.html" class="cta">Contact</a>
     </nav>
   </div>
@@ -100,6 +100,7 @@
 
 </body>
 </html>
+
 
 
 
