--- a/programs.html
+++ b/programs.html
@@ -32,11 +32,9 @@
 <section class="program-detail">
 
   <div class="program-block">
+    <img src="assets/images/base-training.jpg" alt="Base Training">
     <h2>Base Training</h2>
-    <p>
-      Designed for beginners and those returning to training.
-      Focus on form, consistency, and foundational strength.
-    </p>
+    <p>Designed for beginners and those returning to training. Focus on form, consistency, and foundational strength.</p>
     <ul>
       <li>Gym floor access</li>
       <li>Basic guidance</li>
@@ -45,10 +43,9 @@
   </div>
 
   <div class="program-block">
+    <img src="assets/images/community-training.jpg" alt="Community Training">
     <h2>Community Training</h2>
-    <p>
-      Group-based sessions built on accountability and momentum.
-    </p>
+    <p>Group-based sessions built on accountability and momentum.</p>
     <ul>
       <li>Group workouts</li>
       <li>Monthly challenges</li>
@@ -57,11 +54,9 @@
   </div>
 
   <div class="program-block">
+    <img src="assets/images/performance-lab.jpg" alt="Performance Lab">
     <h2>Performance Lab</h2>
-    <p>
-      For serious trainees and athletes. Strength, conditioning,
-      and performance cycles.
-    </p>
+    <p>For serious trainees and athletes. Strength, conditioning, and performance cycles.</p>
     <ul>
       <li>Periodized programs</li>
       <li>Coach supervision</li>
@@ -70,10 +65,9 @@
   </div>
 
   <div class="program-block">
+    <img src="assets/images/personal-coaching.jpg" alt="Personal Coaching">
     <h2>Personal Coaching</h2>
-    <p>
-      One-on-one coaching built around your body, goals, and limits.
-    </p>
+    <p>One-on-one coaching built around your body, goals, and limits.</p>
     <ul>
       <li>Custom plans</li>
       <li>Technique correction</li>
@@ -82,6 +76,7 @@
   </div>
 
 </section>
+
 
 <footer>
   <p>© The Sun Gym & Billiard</p>
