--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@
     <div class="logo">THE SUN GYM</div>
 
     <nav class="nav-links">
-      <a href="programs.html">Programs</a>
-      <a href="coaches.html">Coaches</a>
-      <a href="community.html">Community</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="contact.html" class="cta">Contact</a>
+      <a href="index.html" class="nav-item" id="nav-home">Home</a>
+      <a href="programs.html" class="nav-item" id="nav-programs">Programs</a>
+      <a href="coaches.html" class="nav-item" id="nav-coaches">Coaches</a>
+      <a href="community.html" class="nav-item" id="nav-community">Community</a>
+      <a href="pricing.html" class="nav-item" id="nav-pricing">Pricing</a>
+      <a href="contact.html" class="nav-item cta" id="nav-contact">Contact</a>
     </nav>
+
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </div>
 </header>
 
@@ -100,6 +107,7 @@
 
 </body>
 </html>
+
 
 
 
