--- a/programs.html
+++ b/programs.html
@@ -14,14 +14,24 @@
 <body>
 
 <header class="nav">
-  <div class="logo">THE SUN</div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="programs.html" class="cta">Programs</a>
-    <a href="#">Performance</a>
-    <a href="#">Community</a>
-    <a href="#">Pricing</a>
-  </nav>
+  <div class="nav-container">
+    <div class="logo">THE SUN GYM</div>
+
+    <nav class="nav-links">
+      <a href="index.html" class="nav-item" id="nav-home">Home</a>
+      <a href="programs.html" class="nav-item" id="nav-programs">Programs</a>
+      <a href="coaches.html" class="nav-item" id="nav-coaches">Coaches</a>
+      <a href="community.html" class="nav-item" id="nav-community">Community</a>
+      <a href="pricing.html" class="nav-item" id="nav-pricing">Pricing</a>
+      <a href="contact.html" class="nav-item cta" id="nav-contact">Contact</a>
+    </nav>
+
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
 </header>
 
 <section class="page-hero">
