--- a/community.html
+++ b/community.html
@@ -6,6 +6,9 @@
   <title>Community | The Sun Gym</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
+  <script src="script.js"></script>
+
 <body>
 
 <header class="nav">
