--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
   <link rel="stylesheet" href="style.css" />
 </head>
+
+  <script src="script.js"></script>
+
 <body>
 
   <!-- NAV -->
@@ -107,6 +110,7 @@
 
 </body>
 </html>
+
 
 
 
