--- a/index.html
+++ b/index.html
@@ -104,12 +104,37 @@
   </section>
 
   <!-- FOOTER -->
-  <footer>
-    <p>© The Sun Gym & Billiard</p>
-  </footer>
+<footer class="footer">
+  <div class="footer-grid">
+
+    <div>
+      <h3>© The Sun Gym & Billiard</h3>
+      <p>Elite performance. Real results.</p>
+    </div>
+
+    <div>
+      <h4>Hours</h4>
+      <p>Saturday-Thursday: 7AM – 11PM</p>
+    </div>
+
+    <div>
+      <h4>Contact</h4>
+      <a href="#" class="footer-whatsapp">WhatsApp Us</a>
+      <p>📍 Chittagong, Bangladesh</p>
+    </div>
+
+    <div>
+      <h4>Follow</h4>
+      <p>Instagram · Facebook · YouTube</p>
+    </div>
+
+  </div>
+</footer>
+
 
 </body>
 </html>
+
 
 
 
