--- a/index.html
+++ b/index.html
@@ -5,140 +5,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Sun Gym</title>
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
 </head>
-
-  <script src="script.js"></script>
-
 <body>
 
-  <!-- NAV -->
-  <header class="nav">
+<header class="nav">
   <div class="nav-container">
     <div class="logo">THE SUN GYM</div>
 
     <nav class="nav-links">
-      <a href="index.html" class="nav-item" id="nav-home">Home</a>
-      <a href="programs.html" class="nav-item" id="nav-programs">Programs</a>
-      <a href="coaches.html" class="nav-item" id="nav-coaches">Coaches</a>
-      <a href="community.html" class="nav-item" id="nav-community">Community</a>
-      <a href="pricing.html" class="nav-item" id="nav-pricing">Pricing</a>
-      <a href="contact.html" class="nav-item cta" id="nav-contact">Contact</a>
+      <a href="index.html" id="nav-home">Home</a>
+      <a href="programs.html" id="nav-programs">Programs</a>
+      <a href="coaches.html" id="nav-coaches">Coaches</a>
+      <a href="community.html" id="nav-community">Community</a>
+      <a href="pricing.html" id="nav-pricing">Pricing</a>
+      <a href="contact.html" class="cta" id="nav-contact">Contact</a>
     </nav>
 
     <div class="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
+      <span></span><span></span><span></span>
     </div>
   </div>
 </header>
 
-
-  <!-- HERO -->
 <section class="hero">
   <div class="hero-content">
     <h1>Train Strong. Play Smart. Belong Here.</h1>
-    <p>Elite fitness, community energy, and a space for every level — from beginners to advanced athletes.</p>
+    <p>Elite fitness, community energy, and a space for every level.</p>
     <div class="hero-cta">
       <a href="programs.html" class="btn-primary">Explore Programs</a>
       <a href="contact.html" class="btn-secondary">Book a Visit</a>
     </div>
   </div>
 </section>
-  
 
-  <!-- ABOUT -->
-<section class="about">
+<section class="about section-shadow">
   <h2>Why The Sun Gym?</h2>
-  <p>We are more than a gym. We are a hub where discipline meets community. Train hard, relax smart, connect with people who push you forward.</p>
+  <div class="section-divider"></div>
+  <p>We are more than a gym. Discipline, community, and long-term growth.</p>
 
   <div class="about-cards">
     <div class="card">
       <h3>Serious Training</h3>
-      <p>Structured programs, expert coaches, measurable progress.</p>
+      <p>Structured programs, expert guidance.</p>
     </div>
     <div class="card">
-      <h3>Friendly Vibe</h3>
-      <p>A welcoming space for all ages and experience levels.</p>
+      <h3>Friendly Culture</h3>
+      <p>Inclusive environment for all levels.</p>
     </div>
     <div class="card">
-      <h3>Accessibility & Prestige</h3>
-      <p>Premium facilities with inclusive pricing, without compromising quality.</p>
+      <h3>Premium Access</h3>
+      <p>Top-tier facilities without intimidation.</p>
     </div>
   </div>
+
+  <a href="community.html" class="btn-cta">Join the Community</a>
 </section>
 
+<section class="programs section-shadow">
+  <h2>Choose Your Path</h2>
+  <div class="section-divider"></div>
 
-  <!-- PROGRAMS -->
-  <section class="programs">
-    <h2>Choose Your Path</h2>
-    <div class="program-grid">
+  <div class="program-grid">
+    <div class="card"><h3>Base Training</h3><p>Foundations & form.</p></div>
+    <div class="card"><h3>Community Training</h3><p>Train together.</p></div>
+    <div class="card"><h3>Performance Lab</h3><p>Strength & conditioning.</p></div>
+    <div class="card"><h3>Personal Coaching</h3><p>Custom results.</p></div>
+  </div>
 
-      <div class="card">
-        <h3>Base Training</h3>
-        <p>Start strong. Learn form. Build discipline.</p>
-      </div>
+  <a href="programs.html" class="btn-cta">View All Programs</a>
+</section>
 
-      <div class="card">
-        <h3>Community Training</h3>
-        <p>Train together. Stay accountable.</p>
-      </div>
-
-      <div class="card">
-        <h3>Performance Lab</h3>
-        <p>Strength. Conditioning. Athletic focus.</p>
-      </div>
-
-      <div class="card">
-        <h3>Personal Coaching</h3>
-        <p>Precision training. Custom plans.</p>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- FOOTER -->
 <footer class="footer">
   <div class="footer-grid">
-
     <div>
       <h3>© The Sun Gym & Billiard</h3>
       <p>Elite performance. Real results.</p>
     </div>
-
     <div>
       <h4>Hours</h4>
-      <p>Saturday-Thursday: 7AM – 11PM</p>
+      <p>Daily: 6AM – 11PM</p>
     </div>
-
     <div>
       <h4>Contact</h4>
-      <a href="#" class="footer-whatsapp">WhatsApp Us</a>
-      <p>📍 Chittagong, Bangladesh</p>
+      <a href="contact.html" class="footer-whatsapp">WhatsApp Us</a>
+      <p>Chattogram, Bangladesh</p>
     </div>
-
     <div>
       <h4>Follow</h4>
       <p>Instagram · Facebook · YouTube</p>
     </div>
-
   </div>
 </footer>
 
-
+<script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
