--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Sun Gym</title>
 
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -13,88 +14,115 @@
 </head>
 <body>
 
+<!-- NAV -->
 <header class="nav">
   <div class="nav-container">
     <div class="logo">THE SUN GYM</div>
 
     <nav class="nav-links">
-      <a href="index.html" id="nav-home">Home</a>
-      <a href="programs.html" id="nav-programs">Programs</a>
-      <a href="coaches.html" id="nav-coaches">Coaches</a>
-      <a href="community.html" id="nav-community">Community</a>
-      <a href="pricing.html" id="nav-pricing">Pricing</a>
-      <a href="contact.html" class="cta" id="nav-contact">Contact</a>
+      <a href="index.html" class="nav-item" id="nav-home">Home</a>
+      <a href="programs.html" class="nav-item" id="nav-programs">Programs</a>
+      <a href="coaches.html" class="nav-item" id="nav-coaches">Coaches</a>
+      <a href="community.html" class="nav-item" id="nav-community">Community</a>
+      <a href="pricing.html" class="nav-item" id="nav-pricing">Pricing</a>
+      <a href="contact.html" class="nav-item cta" id="nav-contact">Contact</a>
     </nav>
 
     <div class="hamburger">
-      <span></span><span></span><span></span>
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
   </div>
 </header>
 
-<section class="hero">
+<!-- HERO -->
+<section class="hero section-shadow">
   <div class="hero-content">
     <h1>Train Strong. Play Smart. Belong Here.</h1>
-    <p>Elite fitness, community energy, and a space for every level.</p>
+    <div class="section-divider"></div>
+    <p>Elite fitness, community energy, and a space for every level — from beginners to advanced athletes.</p>
     <div class="hero-cta">
-      <a href="programs.html" class="btn-primary">Explore Programs</a>
-      <a href="contact.html" class="btn-secondary">Book a Visit</a>
+      <a href="programs.html" class="btn-cta">Explore Programs</a>
+      <a href="contact.html" class="btn-cta">Book a Visit</a>
     </div>
   </div>
 </section>
 
+<!-- ABOUT -->
 <section class="about section-shadow">
   <h2>Why The Sun Gym?</h2>
   <div class="section-divider"></div>
-  <p>We are more than a gym. Discipline, community, and long-term growth.</p>
+  <p>We are more than a gym. We are a hub where discipline meets community. Train hard, relax smart, connect with people who push you forward.</p>
 
   <div class="about-cards">
     <div class="card">
       <h3>Serious Training</h3>
-      <p>Structured programs, expert guidance.</p>
+      <p>Structured programs, expert coaches, measurable progress.</p>
     </div>
     <div class="card">
-      <h3>Friendly Culture</h3>
-      <p>Inclusive environment for all levels.</p>
+      <h3>Friendly Vibe</h3>
+      <p>A welcoming space for all ages and experience levels.</p>
     </div>
     <div class="card">
-      <h3>Premium Access</h3>
-      <p>Top-tier facilities without intimidation.</p>
+      <h3>Accessibility & Prestige</h3>
+      <p>Premium facilities with inclusive pricing, without compromising quality.</p>
     </div>
   </div>
 
-  <a href="community.html" class="btn-cta">Join the Community</a>
+  <a href="community.html" class="btn-cta">Join Our Community</a>
 </section>
 
+<!-- PROGRAMS -->
 <section class="programs section-shadow">
   <h2>Choose Your Path</h2>
   <div class="section-divider"></div>
-
   <div class="program-grid">
-    <div class="card"><h3>Base Training</h3><p>Foundations & form.</p></div>
-    <div class="card"><h3>Community Training</h3><p>Train together.</p></div>
-    <div class="card"><h3>Performance Lab</h3><p>Strength & conditioning.</p></div>
-    <div class="card"><h3>Personal Coaching</h3><p>Custom results.</p></div>
+
+    <div class="card">
+      <h3>Base Training</h3>
+      <p>Start strong. Learn form. Build discipline.</p>
+    </div>
+
+    <div class="card">
+      <h3>Community Training</h3>
+      <p>Train together. Stay accountable.</p>
+    </div>
+
+    <div class="card">
+      <h3>Performance Lab</h3>
+      <p>Strength. Conditioning. Athletic focus.</p>
+    </div>
+
+    <div class="card">
+      <h3>Personal Coaching</h3>
+      <p>Precision training. Custom plans.</p>
+    </div>
+
   </div>
 
   <a href="programs.html" class="btn-cta">View All Programs</a>
 </section>
 
+<!-- FOOTER -->
 <footer class="footer">
   <div class="footer-grid">
     <div>
       <h3>© The Sun Gym & Billiard</h3>
       <p>Elite performance. Real results.</p>
     </div>
+
     <div>
       <h4>Hours</h4>
-      <p>Daily: 6AM – 11PM</p>
+      <p>Mon–Sat: 6AM – 11PM</p>
     </div>
+
     <div>
       <h4>Contact</h4>
-      <a href="contact.html" class="footer-whatsapp">WhatsApp Us</a>
-      <p>Chattogram, Bangladesh</p>
+      <a href="https://wa.me/8801XXXXXXXXX" class="footer-whatsapp" target="_blank">WhatsApp Us</a>
+      <p>📍 Chittagong, Bangladesh</p>
     </div>
+
     <div>
       <h4>Follow</h4>
       <p>Instagram · Facebook · YouTube</p>
