--- a/programs.html
+++ b/programs.html
@@ -4,22 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Programs | The Sun Gym</title>
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css" />
 </head>
-
-  <script src="script.js"></script>
-
 <body>
 
 <header class="nav">
   <div class="nav-container">
     <div class="logo">THE SUN GYM</div>
-
     <nav class="nav-links">
       <a href="index.html" class="nav-item" id="nav-home">Home</a>
       <a href="programs.html" class="nav-item" id="nav-programs">Programs</a>
@@ -28,7 +22,6 @@
       <a href="pricing.html" class="nav-item" id="nav-pricing">Pricing</a>
       <a href="contact.html" class="nav-item cta" id="nav-contact">Contact</a>
     </nav>
-
     <div class="hamburger">
       <span></span>
       <span></span>
@@ -37,13 +30,13 @@
   </div>
 </header>
 
-<section class="page-hero">
+<section class="page-hero section-shadow">
   <h1>Training Programs</h1>
+  <div class="section-divider"></div>
   <p>Structured paths. Clear progression. Real outcomes.</p>
 </section>
 
-<section class="program-detail">
-
+<section class="program-detail section-shadow">
   <div class="program-block">
     <img src="assets/images/base-training.jpg" alt="Base Training">
     <h2>Base Training</h2>
@@ -53,6 +46,7 @@
       <li>Basic guidance</li>
       <li>Structured environment</li>
     </ul>
+    <a href="contact.html" class="btn-cta">Join Base Training</a>
   </div>
 
   <div class="program-block">
@@ -64,6 +58,7 @@
       <li>Monthly challenges</li>
       <li>Progress tracking</li>
     </ul>
+    <a href="contact.html" class="btn-cta">Join Community Training</a>
   </div>
 
   <div class="program-block">
@@ -75,6 +70,7 @@
       <li>Coach supervision</li>
       <li>Metrics-based progress</li>
     </ul>
+    <a href="contact.html" class="btn-cta">Join Performance Lab</a>
   </div>
 
   <div class="program-block">
@@ -86,14 +82,32 @@
       <li>Technique correction</li>
       <li>Maximum results</li>
     </ul>
+    <a href="contact.html" class="btn-cta">Book Personal Coaching</a>
   </div>
-
 </section>
 
-
-<footer>
-  <p>© The Sun Gym & Billiard</p>
+<footer class="footer">
+  <div class="footer-grid">
+    <div>
+      <h3>© The Sun Gym & Billiard</h3>
+      <p>Elite performance. Real results.</p>
+    </div>
+    <div>
+      <h4>Hours</h4>
+      <p>Mon–Sat: 6AM – 11PM</p>
+    </div>
+    <div>
+      <h4>Contact</h4>
+      <a href="https://wa.me/8801XXXXXXXXX" class="footer-whatsapp" target="_blank">WhatsApp Us</a>
+      <p>📍 Chittagong, Bangladesh</p>
+    </div>
+    <div>
+      <h4>Follow</h4>
+      <p>Instagram · Facebook · YouTube</p>
+    </div>
+  </div>
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
