--- a/community.html
+++ b/community.html
@@ -4,22 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Community | The Sun Gym</title>
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css" />
 </head>
-
-  <script src="script.js"></script>
-
 <body>
 
 <header class="nav">
   <div class="nav-container">
     <div class="logo">THE SUN GYM</div>
-
     <nav class="nav-links">
       <a href="index.html" class="nav-item" id="nav-home">Home</a>
       <a href="programs.html" class="nav-item" id="nav-programs">Programs</a>
@@ -28,7 +22,6 @@
       <a href="pricing.html" class="nav-item" id="nav-pricing">Pricing</a>
       <a href="contact.html" class="nav-item cta" id="nav-contact">Contact</a>
     </nav>
-
     <div class="hamburger">
       <span></span>
       <span></span>
@@ -37,12 +30,13 @@
   </div>
 </header>
 
-<section class="page-hero">
+<section class="page-hero section-shadow">
   <h1>Join the Community</h1>
+  <div class="section-divider"></div>
   <p>Experience the energy, challenges, and rewards that make training together stronger.</p>
 </section>
 
-<section class="community-section">
+<section class="community-section section-shadow">
   <div class="community-card">
     <h3>Group Challenges</h3>
     <p>Monthly challenges to push everyone forward.</p>
@@ -57,9 +51,28 @@
   </div>
 </section>
 
-<footer>
-  <p>© The Sun Gym & Billiard</p>
+<footer class="footer">
+  <div class="footer-grid">
+    <div>
+      <h3>© The Sun Gym & Billiard</h3>
+      <p>Elite performance. Real results.</p>
+    </div>
+    <div>
+      <h4>Hours</h4>
+      <p>Mon–Sat: 6AM – 11PM</p>
+    </div>
+    <div>
+      <h4>Contact</h4>
+      <a href="https://wa.me/8801XXXXXXXXX" class="footer-whatsapp" target="_blank">WhatsApp Us</a>
+      <p>📍 Chittagong, Bangladesh</p>
+    </div>
+    <div>
+      <h4>Follow</h4>
+      <p>Instagram · Facebook · YouTube</p>
+    </div>
+  </div>
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
