--- a/pricing.html
+++ b/pricing.html
@@ -4,22 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pricing | The Sun Gym</title>
-  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css" />
 </head>
-
-  <script src="script.js"></script>
-
 <body>
 
 <header class="nav">
   <div class="nav-container">
     <div class="logo">THE SUN GYM</div>
-
     <nav class="nav-links">
       <a href="index.html" class="nav-item" id="nav-home">Home</a>
       <a href="programs.html" class="nav-item" id="nav-programs">Programs</a>
@@ -28,7 +22,6 @@
       <a href="pricing.html" class="nav-item" id="nav-pricing">Pricing</a>
       <a href="contact.html" class="nav-item cta" id="nav-contact">Contact</a>
     </nav>
-
     <div class="hamburger">
       <span></span>
       <span></span>
@@ -37,32 +30,55 @@
   </div>
 </header>
 
-<section class="page-hero">
+<section class="page-hero section-shadow">
   <h1>Membership Plans</h1>
+  <div class="section-divider"></div>
   <p>Flexible options designed for all levels of commitment and goals.</p>
 </section>
 
-<section class="pricing-section">
+<section class="pricing-section section-shadow">
   <div class="pricing-card">
     <h3>Base</h3>
     <p>Access to gym floor & community sessions</p>
     <p><strong>$30/month</strong></p>
+    <a href="contact.html" class="btn-cta">Get Base Plan</a>
   </div>
   <div class="pricing-card">
     <h3>Community</h3>
     <p>Group training, events & challenges</p>
     <p><strong>$50/month</strong></p>
+    <a href="contact.html" class="btn-cta">Get Community Plan</a>
   </div>
   <div class="pricing-card">
     <h3>Performance</h3>
     <p>Advanced programs & personal coaching sessions</p>
     <p><strong>$80/month</strong></p>
+    <a href="contact.html" class="btn-cta">Get Performance Plan</a>
   </div>
 </section>
 
-<footer>
-  <p>© The Sun Gym & Billiard</p>
+<footer class="footer">
+  <div class="footer-grid">
+    <div>
+      <h3>© The Sun Gym & Billiard</h3>
+      <p>Elite performance. Real results.</p>
+    </div>
+    <div>
+      <h4>Hours</h4>
+      <p>Mon–Sat: 6AM – 11PM</p>
+    </div>
+    <div>
+      <h4>Contact</h4>
+      <a href="https://wa.me/8801XXXXXXXXX" class="footer-whatsapp" target="_blank">WhatsApp Us</a>
+      <p>📍 Chittagong, Bangladesh</p>
+    </div>
+    <div>
+      <h4>Follow</h4>
+      <p>Instagram · Facebook · YouTube</p>
+    </div>
+  </div>
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
