--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | The Sun Gym</title>
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css" />
 </head>
-
-  <script src="script.js"></script>
-
 <body>
 
 <header class="nav">
   <div class="nav-container">
     <div class="logo">THE SUN GYM</div>
-
     <nav class="nav-links">
       <a href="index.html" class="nav-item" id="nav-home">Home</a>
       <a href="programs.html" class="nav-item" id="nav-programs">Programs</a>
@@ -28,7 +22,6 @@
       <a href="pricing.html" class="nav-item" id="nav-pricing">Pricing</a>
       <a href="contact.html" class="nav-item cta" id="nav-contact">Contact</a>
     </nav>
-
     <div class="hamburger">
       <span></span>
       <span></span>
@@ -37,40 +30,51 @@
   </div>
 </header>
 
-<section class="page-hero">
+<section class="page-hero section-shadow">
   <h1>Visit The Gym</h1>
+  <div class="section-divider"></div>
   <p>Come see the environment. Start properly.</p>
 </section>
 
-<section class="contact-section">
-
+<section class="contact-section section-shadow">
   <div class="contact-info">
     <h3>Location</h3>
     <p>The Sun Gym & Billiard</p>
-    <p>Raozan, Chattogram</p>
+    <p>Chawkbazar, Chattogram</p>
 
     <h3>Hours</h3>
     <p>Daily: 6:00 AM – 11:00 PM</p>
 
-    <a class="whatsapp-btn"
-       href="https://wa.me/8801XXXXXXXXX"
-       target="_blank">
-       Chat on WhatsApp
-    </a>
+    <a class="whatsapp-btn" href="https://wa.me/8801XXXXXXXXX" target="_blank">Chat on WhatsApp</a>
   </div>
 
   <div class="map">
-    <iframe
-      src="https://www.google.com/maps?q=The%20Sun%20Gym%20%26%20Billiard&output=embed"
-      loading="lazy">
-    </iframe>
+    <iframe src="https://www.google.com/maps?q=The%20Sun%20Gym%20%26%20Billiard&output=embed" loading="lazy"></iframe>
   </div>
-
 </section>
 
-<footer>
-  <p>© The Sun Gym & Billiard</p>
+<footer class="footer">
+  <div class="footer-grid">
+    <div>
+      <h3>© The Sun Gym & Billiard</h3>
+      <p>Elite performance. Real results.</p>
+    </div>
+    <div>
+      <h4>Hours</h4>
+      <p>Mon–Sat: 6AM – 11PM</p>
+    </div>
+    <div>
+      <h4>Contact</h4>
+      <a href="https://wa.me/8801XXXXXXXXX" class="footer-whatsapp" target="_blank">WhatsApp Us</a>
+      <p>📍 Chittagong, Bangladesh</p>
+    </div>
+    <div>
+      <h4>Follow</h4>
+      <p>Instagram · Facebook · YouTube</p>
+    </div>
+  </div>
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
