--- a/coaches.html
+++ b/coaches.html
@@ -39,17 +39,20 @@
 <section class="coach-grid section-shadow">
   <div class="coach-card">
     <img src="assets/images/coach1.jpg" alt="Head Coach">
-    <h3>Head Coach</h3>
+    <h3>Chris Bumstead</h3>
+    <h4>Head Coach</h4>
     <p>Strength & Conditioning</p>
   </div>
   <div class="coach-card">
     <img src="assets/images/coach2.jpg" alt="Performance Coach">
-    <h3>Performance Coach</h3>
+    <h3>David Laid</h3>
+    <h4>Performance Coach</h4>
     <p>Athletic Development</p>
   </div>
   <div class="coach-card">
     <img src="assets/images/coach3.jpg" alt="Community Coach">
-    <h3>Community Coach</h3>
+    <h3>Annabel Lucinda</h3>
+    <h4>Community Coach</h4>
     <p>Group Training</p>
   </div>
 </section>
