--- a/index.html
+++ b/index.html
@@ -47,20 +47,22 @@
   <h2>Why The Sun Gym?</h2>
   <div class="section-divider"></div>
   <p>We are more than a gym. We are a hub where discipline meets community. Train hard, relax smart, connect with people who push you forward.</p>
+  
   <div class="about-cards">
-    <div class="card">
-      <h3>Serious Training</h3>
-      <p>Structured programs, expert coaches, measurable progress.</p>
-    </div>
-    <div class="card">
-      <h3>Friendly Vibe</h3>
-      <p>A welcoming space for all ages and experience levels.</p>
-    </div>
-    <div class="card">
-      <h3>Accessibility & Prestige</h3>
-      <p>Premium facilities with inclusive pricing, without compromising quality.</p>
-    </div>
+  <div class="card about-card training">
+    <h3>Serious Training</h3>
+    <p>Structured programs, expert coaches, measurable progress.</p>
   </div>
+  <div class="card about-card vibe">
+    <h3>Friendly Vibe</h3>
+    <p>A welcoming space for all ages and experience levels.</p>
+  </div>
+  <div class="card about-card prestige">
+    <h3>Accessibility & Prestige</h3>
+    <p>Premium facilities with inclusive pricing, without compromising quality.</p>
+  </div>
+</div>
+
   <a href="community.html" class="btn-cta">Join Our Community</a>
 </section>
 
@@ -113,3 +115,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
