--- a/index.html
+++ b/index.html
@@ -47,47 +47,58 @@
   <h2>Why The Sun Gym?</h2>
   <div class="section-divider"></div>
   <p>We are more than a gym. We are a hub where discipline meets community. Train hard, relax smart, connect with people who push you forward.</p>
-  
+
   <div class="about-cards">
-  <div class="card about-card training">
-    <h3>Serious Training</h3>
-    <p>Structured programs, expert coaches, measurable progress.</p>
+    <div class="card about-card training">
+      <h3>Serious Training</h3>
+      <p>Structured programs, expert coaches, measurable progress.</p>
+    </div>
+    <div class="card about-card vibe">
+      <h3>Friendly Vibe</h3>
+      <p>A welcoming space for all ages and experience levels.</p>
+    </div>
+    <div class="card about-card prestige">
+      <h3>Accessibility & Prestige</h3>
+      <p>Premium facilities with inclusive pricing, without compromising quality.</p>
+    </div>
   </div>
-  <div class="card about-card vibe">
-    <h3>Friendly Vibe</h3>
-    <p>A welcoming space for all ages and experience levels.</p>
-  </div>
-  <div class="card about-card prestige">
-    <h3>Accessibility & Prestige</h3>
-    <p>Premium facilities with inclusive pricing, without compromising quality.</p>
-  </div>
-</div>
 
   <a href="community.html" class="btn-cta">Join Our Community</a>
 </section>
 
-<section class="programs section-shadow">
+<!-- UPGRADED CHOOSE YOUR PATH -->
+<section class="path-section section-shadow">
   <h2>Choose Your Path</h2>
+  <p class="path-sub">
+    Every result begins with a decision. Select the path that matches your ambition.
+  </p>
+
   <div class="section-divider"></div>
-  <div class="program-grid">
-    <div class="card">
-      <h3>Base Training</h3>
-      <p>Start strong. Learn form. Build discipline.</p>
+
+  <div class="path-grid">
+
+    <div class="path-card elite">
+      <div class="path-overlay"></div>
+      <h3>Elite Performance</h3>
+      <p>For athletes and individuals chasing peak strength and conditioning.</p>
+      <a href="programs.html" class="btn-cta">Train Like an Elite</a>
     </div>
-    <div class="card">
-      <h3>Community Training</h3>
-      <p>Train together. Stay accountable.</p>
+
+    <div class="path-card community">
+      <div class="path-overlay"></div>
+      <h3>Community Fitness</h3>
+      <p>Train together, stay consistent, and grow with a powerful community.</p>
+      <a href="community.html" class="btn-cta">Join the Community</a>
     </div>
-    <div class="card">
-      <h3>Performance Lab</h3>
-      <p>Strength. Conditioning. Athletic focus.</p>
+
+    <div class="path-card lifestyle">
+      <div class="path-overlay"></div>
+      <h3>Lifestyle & Health</h3>
+      <p>Sustainable fitness focused on strength, mobility, and longevity.</p>
+      <a href="pricing.html" class="btn-cta">View Memberships</a>
     </div>
-    <div class="card">
-      <h3>Personal Coaching</h3>
-      <p>Precision training. Custom plans.</p>
-    </div>
+
   </div>
-  <a href="programs.html" class="btn-cta">View All Programs</a>
 </section>
 
 <footer class="footer">
@@ -98,7 +109,7 @@
     </div>
     <div>
       <h4>Hours</h4>
-      <p>Mon–Sat: 6AM – 11PM</p>
+      <p>Sat-Thu: 7AM – 11PM</p>
     </div>
     <div>
       <h4>Contact</h4>
@@ -115,4 +126,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
