--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 </section>
 
-<section class="about section-shadow">
+<section class="about section-shadow reveal">
   <h2>Why The Sun Gym?</h2>
   <div class="section-divider"></div>
   <p>We are more than a gym. We are a hub where discipline meets community. Train hard, relax smart, connect with people who push you forward.</p>
@@ -75,7 +75,7 @@
 
   <div class="section-divider"></div>
 
-  <div class="path-grid">
+  <div class="path-grid reveal">
 
     <div class="path-card elite">
       <div class="path-overlay"></div>
@@ -126,3 +126,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
