--- a/pricing.html
+++ b/pricing.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pricing | The Sun Gym</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -30,31 +32,78 @@
   </div>
 </header>
 
+<!-- HERO -->
 <section class="page-hero section-shadow">
-  <h1>Membership Plans</h1>
+  <h1>Choose Your Commitment</h1>
   <div class="section-divider"></div>
-  <p>Flexible options designed for all levels of commitment and goals.</p>
+  <p>Different paths. Same destination: strength, discipline, dominance.</p>
 </section>
 
+<!-- PRICING -->
 <section class="pricing-section section-shadow">
+
+  <!-- BASE -->
   <div class="pricing-card">
+    <span class="plan-tag">Foundation</span>
     <h3>Base</h3>
-    <p>Access to gym floor & community sessions</p>
-    <p><strong>$30/month</strong></p>
-    <a href="contact.html" class="btn-cta">Get Base Plan</a>
+
+    <p class="plan-desc">
+      For individuals who want full gym access and self-driven progress.
+    </p>
+
+    <ul class="plan-features">
+      <li>✔ Full gym floor access</li>
+      <li>✔ Community workout sessions</li>
+      <li>✔ Locker & equipment usage</li>
+    </ul>
+
+    <p class="plan-price">$30<span>/month</span></p>
+
+    <a href="contact.html" class="btn-cta">Start with Base</a>
   </div>
-  <div class="pricing-card">
+
+  <!-- COMMUNITY (FEATURED) -->
+  <div class="pricing-card featured">
+    <span class="plan-tag highlight">Most Chosen</span>
     <h3>Community</h3>
-    <p>Group training, events & challenges</p>
-    <p><strong>$50/month</strong></p>
-    <a href="contact.html" class="btn-cta">Get Community Plan</a>
+
+    <p class="plan-desc">
+      For those who grow faster in groups, challenges, and shared energy.
+    </p>
+
+    <ul class="plan-features">
+      <li>✔ Everything in Base</li>
+      <li>✔ Group training sessions</li>
+      <li>✔ Monthly challenges & events</li>
+      <li>✔ Priority community access</li>
+    </ul>
+
+    <p class="plan-price">$50<span>/month</span></p>
+
+    <a href="contact.html" class="btn-cta">Join the Community</a>
   </div>
+
+  <!-- PERFORMANCE -->
   <div class="pricing-card">
+    <span class="plan-tag">Elite</span>
     <h3>Performance</h3>
-    <p>Advanced programs & personal coaching sessions</p>
-    <p><strong>$80/month</strong></p>
-    <a href="contact.html" class="btn-cta">Get Performance Plan</a>
+
+    <p class="plan-desc">
+      For athletes and high-performers who want structured domination.
+    </p>
+
+    <ul class="plan-features">
+      <li>✔ Everything in Community</li>
+      <li>✔ Advanced performance programs</li>
+      <li>✔ Personal coaching sessions</li>
+      <li>✔ Progress tracking & assessment</li>
+    </ul>
+
+    <p class="plan-price">$80<span>/month</span></p>
+
+    <a href="contact.html" class="btn-cta">Unlock Performance</a>
   </div>
+
 </section>
 
 <footer class="footer">
@@ -63,15 +112,18 @@
       <h3>© The Sun Gym & Billiard</h3>
       <p>Elite performance. Real results.</p>
     </div>
+
     <div>
       <h4>Hours</h4>
       <p>Mon–Sat: 6AM – 11PM</p>
     </div>
+
     <div>
       <h4>Contact</h4>
       <a href="https://wa.me/8801XXXXXXXXX" class="footer-whatsapp" target="_blank">WhatsApp Us</a>
       <p>📍 Chittagong, Bangladesh</p>
     </div>
+
     <div>
       <h4>Follow</h4>
       <p>Instagram · Facebook · YouTube</p>
