--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | The Sun Gym</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -45,11 +46,19 @@
     <h3>Hours</h3>
     <p>Daily: 6:00 AM – 11:00 PM</p>
 
-    <a class="whatsapp-btn" href="https://wa.me/8801XXXXXXXXX" target="_blank">Chat on WhatsApp</a>
+    <a class="whatsapp-btn" href="https://wa.me/8801XXXXXXXXX" target="_blank">
+      Talk to a Coach
+    </a>
   </div>
 
-  <div class="map">
-    <iframe src="https://www.google.com/maps?q=The%20Sun%20Gym%20%26%20Billiard&output=embed" loading="lazy"></iframe>
+  <!-- DARK GOOGLE MAP -->
+  <div class="map-section">
+    <iframe
+      class="dark-map"
+      src="https://www.google.com/maps?q=The%20Sun%20Gym%20%26%20Billiard&output=embed"
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
   </div>
 </section>
 
