--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
   <div class="contact-info">
     <h3>Location</h3>
     <p>The Sun Gym & Billiard</p>
-    <p>Chawkbazar, Chattogram</p>
+    <p>Fortune Tower, 112/113, তেলিপাট্টি সড়ক, Chawkbazar, Chattogram</p>
 
     <h3>Hours</h3>
     <p>Daily: 6:00 AM – 11:00 PM</p>
